--- a/notebooks/01-explo.ipynb
+++ b/notebooks/01-explo.ipynb
@@ -1832,14 +1832,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/html": [
        "\n",
-       "<div id='i3ZER56SDEYK4NJJT6F1N'>\n",
+       "<div id='i2NV16Q1M8SSWIQ3TU42E'>\n",
        "<div style='color: #900; text-align: center;'>\n",
        "  <b>Visualization omitted, Javascript library not loaded!</b><br>\n",
        "  Have you run `initjs()` in this notebook? If this notebook was from another\n",
@@ -1850,15 +1850,15 @@
        " <script>\n",
        "   if (window.SHAP) SHAP.ReactDom.render(\n",
        "    SHAP.React.createElement(SHAP.AdditiveForceVisualizer, {\"outNames\": [\"f(x)\"], \"baseValue\": 0.3807744107744107, \"outValue\": 0.0661666666666672, \"link\": \"identity\", \"featureNames\": [\"num__Pclass\", \"num__Age\", \"num__SibSp\", \"num__Parch\", \"num__Fare\", \"cat__Sex_female\", \"cat__Sex_male\", \"cat__Embarked_C\", \"cat__Embarked_Q\", \"cat__Embarked_S\", \"cat__Embarked_nan\"], \"features\": {\"0\": {\"effect\": -0.04986422921219001, \"value\": 0.8273772438659699}, \"1\": {\"effect\": -0.021444327019609122, \"value\": -0.5801225989962785}, \"2\": {\"effect\": 0.034719808313195155, \"value\": 0.4327933656785018}, \"3\": {\"effect\": 0.00020671029125870648, \"value\": -0.4736736092984604}, \"4\": {\"effect\": -0.067931542125154, \"value\": -0.5024451714361923}, \"5\": {\"effect\": -0.09770900002247172, \"value\": -0.7376951317802901}, \"6\": {\"effect\": -0.08938593003812376, \"value\": 0.7376951317802901}, \"7\": {\"effect\": -0.011160008298868034, \"value\": -0.4820426798824101}, \"8\": {\"effect\": 0.0012703167009200018, \"value\": -0.3075623426146228}, \"9\": {\"effect\": -0.013286165458629585, \"value\": 0.6193063641452488}, \"10\": {\"effect\": -2.3377238071095058e-05, \"value\": -0.04743120054512489}}, \"plot_cmap\": \"RdBu\", \"labelMargin\": 20}),\n",
-       "    document.getElementById('i3ZER56SDEYK4NJJT6F1N')\n",
+       "    document.getElementById('i2NV16Q1M8SSWIQ3TU42E')\n",
        "  );\n",
        "</script>"
       ],
       "text/plain": [
-       "<shap.plots._force.AdditiveForceVisualizer at 0x7f485ef34280>"
+       "<shap.plots._force.AdditiveForceVisualizer at 0x7f487e8c0a90>"
       ]
      },
-     "execution_count": 60,
+     "execution_count": 62,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1866,6 +1866,64 @@
    "source": [
     "p_index = 0\n",
     "shap.force_plot(explainer.expected_value[1], shap_values[1][p_index, :], X_transf.iloc[p_index, :])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 63,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "X does not have valid feature names, but RandomForestClassifier was fitted with feature names\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "array([0])"
+      ]
+     },
+     "execution_count": 63,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "estimator_pipe.predict(X_transf.iloc[p_index, :].values.reshape(1, -1))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 64,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "num__Pclass          0.827377\n",
+       "num__Age            -0.580123\n",
+       "num__SibSp           0.432793\n",
+       "num__Parch          -0.473674\n",
+       "num__Fare           -0.502445\n",
+       "cat__Sex_female     -0.737695\n",
+       "cat__Sex_male        0.737695\n",
+       "cat__Embarked_C     -0.482043\n",
+       "cat__Embarked_Q     -0.307562\n",
+       "cat__Embarked_S      0.619306\n",
+       "cat__Embarked_nan   -0.047431\n",
+       "Name: 0, dtype: float64"
+      ]
+     },
+     "execution_count": 64,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "X_transf.iloc[p_index, :]"
    ]
   },
   {
